[package]
name = "rust_pi"
version = "0.1.0"
edition = "2024"

[dependencies]
dashu-int = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
ureq = { version = "3.1.2", features = ["json"] }
